# hut-services

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: main.yml  main.yml.old  new-version.yml
changelog/: index.html
docs/: changelog.md  docu.md  index.md  modules.md
docs/api/: core.md  osm.md  refuges_info.md
docu/: index.html
examples/: osm_service.py
reference/SUMMARY/: index.html
reference/hut_services/: index.html
reference/hut_services/core/: index.html
reference/hut_services/core/cache/: index.html
reference/hut_services/core/guess/: index.html
reference/hut_services/core/schema/: index.html
reference/hut_services/core/schema/geo/: index.html
reference/hut_services/core/schema/geo/bbox/: index.html
reference/hut_services/core/schema/geo/geo/: index.html
reference/hut_services/core/schema/geo/types/: index.html
reference/hut_services/core/schema/locale/: index.html
reference/hut_services/core/service/: index.html
reference/hut_services/core/utils/: index.html
reference/hut_services/geocode/: index.html
reference/hut_services/geocode/schema/: index.html
reference/hut_services/geocode/script/: index.html
reference/hut_services/geocode/service/: index.html
reference/hut_services/osm/: index.html
reference/hut_services/osm/coordinates/: index.html
reference/hut_services/osm/exceptions/: index.html
reference/hut_services/osm/schema/: index.html
reference/hut_services/osm/service/: index.html
reference/hut_services/refuges_info/: index.html
reference/hut_services/refuges_info/coordinates/: index.html
reference/hut_services/refuges_info/exceptions/: index.html
reference/hut_services/refuges_info/massif/: index.html
reference/hut_services/refuges_info/schema/: index.html
reference/hut_services/refuges_info/service/: index.html
reference/hut_services/refuges_info/utils/: index.html
reference/hut_services/services/: index.html
reference/hut_services/wikicommons/: index.html
reference/hut_services/wikicommons/service/: index.html
reference/hut_services/wikidata/: index.html
reference/hut_services/wikidata/schema/: index.html
reference/hut_services/wikidata/script/: index.html
reference/hut_services/wikidata/service/: index.html
search/: search_index.json
src/hut_services/: __init__.py  services.py
src/hut_services/core/: cache.py  guess.py
src/hut_services/core/schema/: __init__.py  _base.py  _booking.py  _contact.py  _hut.py  _hut_base_converter.py  _hut_base_source.py  _hut_fields.py  _license.py  _photo.py  geo.py  locale.py
src/hut_services/core/schema/geo/: __init__.py  bbox.py  geo.py  types.py
src/hut_services/core/service/: __init__.py  _guess_hut_type.py  _service_base.py
src/hut_services/core/utils/: __init__.py  _gps_converter.py
src/hut_services/geocode/: __init__.py  schema.py  script.py  service.py
src/hut_services/osm/: __init__.py  coordinates.py  exceptions.py  schema.py  service.py  utils.py
src/hut_services/refuges_info/: __init__.py  coordinates.py  exceptions.py  massif.py  schema.py  service.py  service.py.old  utils.py
src/hut_services/wikicommons/: __init__.py  service.py
src/hut_services/wikidata/: __init__.py  _get_image_infos.py  schema.py  script.py  service.py
src/hut_services/wikipedia/: README.adoc
tasks/: __init__.py  _logger.py  changelog.py  check.py  docs.py  project.py
tests/: test_foo.py
tests/core/: test_guess.py
tests/core/schema/: test_contact_schema.py  test_onwer_schema.py
tests/core/utils/: test_gps_converter.py
tests/geocode/: test_geocode_service.py
tests/osm/: test_osm_service.py
tests/refuges_info/: test_refuges_info_service.py
