[tool.poetry]
name = "hut_services"
version = "0.0.1"
description = "Services to retrieve information about (mountain) huts"
authors = ["TBxy <tb@wodore.com>"]
repository = "https://github.com/wodore/hut-services"
documentation = "https://wodore.github.io/hut-services/"
readme = "README.md"
#packages = [
#  {include = "src/hut_services"}
#]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.5.2"
overpy = "^0.7"
geojson-pydantic = "^1.0.1"
phonenumbers = "^8.13.26"
easydict = "^1.11"
types-xmltodict = "^0.13.0.3"
xmltodict = "^0.13.0"
httpx = "^0.25.2"
python-slugify = "^8.0.1"
types-python-slugify = "^8.0.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-cov = "^4.1.0"
rich = "^13.7.0"
icecream = "^2.1.3"
pyright = "^1.1.341"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.5.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src/hut_services"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Too compelx
    "C901",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]

#[tool.deptry]
#ignore = ["DEP003"]

[tool.deptry.per_rule_ignores]
DEP004 = ["rich"] # only in dev
DEP003 = ["hut_services"] # transitive dependencies
DEP002 = ["types-xmltodict", "types-python-slugify"] # not used
